# HumbleDialogBox

./: CMakeLists.txt  README.markdown
CppUnitLite/: CMakeLists.txt  TestResult.cpp  TestResult.h
Example/: CMakeLists.txt  Example.cpp  Example.h  Example.rc  ExampleDlg.cpp  ExampleDlg.h  Resource.h  stdafx.cpp
ExampleTest/: CMakeLists.txt  ExampleTest.cpp  ExampleTest.vcproj
UiLib/: CMakeLists.txt  ChainComposer.cpp  ChainComposer.h  ChainComposerView.h  Filter.h  MockChainComposerView.cpp  MockChainComposerView.h  ReverbFilter.h
UiLibTest/: CMakeLists.txt  ChainComposerTest.cpp  main.cpp  stdafx.cpp
doc/: humbledialog.html
